feat: 合并冗余API
